--- a/Halloapp/de.lproj/Localizable.stringsdict
+++ b/Halloapp/de.lproj/Localizable.stringsdict
@@ -127,9 +127,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Medium konnte nicht vorbereitet werden. Bitte versuche es noch einmal oder wähle ein anderes Foto/Video aus.</string>
+			<string>Mediendatei konnte nicht erstellt werden. Bitte versuche es noch einmal oder wähle ein anderes Foto/Video aus.</string>
 			<key>other</key>
-			<string>%d Medien konnten nicht vorbereitet werden. Bitte versuche es noch einmal oder wähle ein anderes Foto/Video aus.</string>
+			<string>%d Mediendateien konnten nicht erstellt werden. Bitte versuche es noch einmal oder wähle ein anderes Foto/Video aus.</string>
 		</dict>
 	</dict>
 	<key>n.invites.count</key>
