--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -143,6 +143,12 @@
 "call.button.speaker" = "بلندگو";
 
 /* Title for call history event. Appears next to details of a successful call. */
+"call.history.video.call" = "تماس ویدیویی";
+
+/* Title for call history event. Appears next to details of a missed call. */
+"call.history.video.call.missed" = "تماس ویدیویی از دست رفته";
+
+/* Title for call history event. Appears next to details of a successful call. */
 "call.history.voice.call" = "تماس صوتی";
 
 /* Title for call history event. Appears next to details of a missed call. */
@@ -999,6 +1005,9 @@
 
 /* New post notification text when post is one video without caption. */
 "notification.one.video" = "ویدیو 📹";
+
+/* Missed video call notification text to be shown to the user. */
+"notification.videocall.missed" = "📹 تماس ویدیویی از دست رفته";
 
 /* Missed voice call notification text to be shown to the user. */
 "notification.voicecall.missed" = "☎️ تماس صوتی از دست رفته";
