--- a/Notification Service Extension/tr.lproj/Localizable.strings
+++ b/Notification Service Extension/tr.lproj/Localizable.strings
@@ -61,11 +61,29 @@
 /* Title for generic Share button. Mostly used to complete some modal flow. */
 "button.share" = "Paylaş";
 
+/* Title for generic Stop button. Currently used to stop an audio recording) */
+"button.stop" = "Durdur";
+
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Güncelle";
 
+/* Alert message when missing microphone access */
+"chat.mic.access.denied.message" = "Ses kaydını etkinleştirmek için lütfen Ayarlara git ve Mikrofonu aç";
+
+/* Alert title when missing microphone access */
+"chat.mic.access.denied.title" = "Mikrofona erişilemiyor";
+
 /* Title for generic delete button. */
 "Delete" = "Sil";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.all" = "Bütün kişilerimle paylaş";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.except" = "Seçtiklerim hariç, kişilerimle paylaş";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.only" = "Yalnızca seçilen kişilerle paylaş";
 
 /* Text shown in notification when the user is added to a new group */
 "groups.add.notification" = "Yeni bir gruba eklendin";
@@ -84,6 +102,9 @@
 
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Ben";
+
+/* Button title. Refers to discarding photo/video edits in media composer. */
+"media.button.discard" = "Sil";
 
 /* Push notification for a new comment. Parameter is the text of the comment */
 "notification.commented.with.text" = "Yorum yapıldı: %@";
@@ -121,11 +142,20 @@
 /* New post notification text when post is one video without caption. */
 "notification.one.video" = "📹 video";
 
+/* Missed video call notification text to be shown to the user. */
+"notification.videocall.missed" = "📹 Cevapsız görüntülü arama";
+
+/* Missed voice call notification text to be shown to the user. */
+"notification.voicecall.missed" = "☎️ Cevapsız çağrı";
+
 /* New post notification text when post is a voice note. */
 "notification.voicenote" = "🎤 Sesli mesaj";
 
 /* String to auto-fill if a user tried to share to a friend. */
 "settings.share.text" = "HalloApp'teki gerçek ilişkiler ağıma katıl. halloapp.com/dl adresinden ücretsiz indir.";
+
+/* Row in Settings screen */
+"title.privacy" = "Gizlilik";
 
 /* Displayed in place of contact name if name is not known. */
 "unknown.contact" = "Bilinmeyen kişi";
