--- a/Share Extension/tr.lproj/Localizable.strings
+++ b/Share Extension/tr.lproj/Localizable.strings
@@ -61,11 +61,29 @@
 /* Title for generic Share button. Mostly used to complete some modal flow. */
 "button.share" = "Paylaş";
 
+/* Title for generic Stop button. Currently used to stop an audio recording) */
+"button.stop" = "Durdur";
+
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Güncelle";
 
+/* Alert message when missing microphone access */
+"chat.mic.access.denied.message" = "Ses kaydını etkinleştirmek için lütfen Ayarlara git ve Mikrofonu aç";
+
+/* Alert title when missing microphone access */
+"chat.mic.access.denied.title" = "Mikrofona erişilemiyor";
+
 /* Title for generic delete button. */
 "Delete" = "Sil";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.all" = "Bütün kişilerimle paylaş";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.except" = "Seçtiklerim hariç, kişilerimle paylaş";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.only" = "Yalnızca seçilen kişilerle paylaş";
 
 /* Generic label for search, mostly used as placeholder text for searchbar */
 "label.search" = "Ara";
@@ -82,8 +100,14 @@
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Ben";
 
+/* Button title. Refers to discarding photo/video edits in media composer. */
+"media.button.discard" = "Sil";
+
 /* String to auto-fill if a user tried to share to a friend. */
 "settings.share.text" = "HalloApp'teki gerçek ilişkiler ağıma katıl. halloapp.com/dl adresinden ücretsiz indir.";
+
+/* Label above the list with whom you share */
+"share.composer.destinations.label" = "...ile paylaş";
 
 /* Placeholder for media caption. */
 "share.composer.placeholder" = "Bir açıklama yaz";
@@ -118,6 +142,16 @@
 /* Share on the home feed label */
 "share.destination.home" = "Ana sayfa";
 
+/* Alert title when a direct to contact sharing is missing
+   Alert title when a direct to group sharing is missing */
+"share.destination.missing.group" = "%@ grubuna yanıt verilmedi";
+
+/* Show more groups in the share group selection */
+"share.destination.more" = "Daha fazla ... göster";
+
+/* Share on the home feed selection cell */
+"share.destination.new" = "Yeni gönderi";
+
 /* Destination screen title */
 "share.destination.title" = "HalloApp";
 
@@ -127,6 +161,15 @@
 /* Title of alert when user is not logged in */
 "share.notlogged.title" = "Oturum açmadın.";
 
+/* Row in Settings screen */
+"title.privacy" = "Gizlilik";
+
 /* Displayed in place of contact name if name is not known. */
 "unknown.contact" = "Bilinmeyen kişi";
+
+/* How many bytes from total have been uploaded */
+"uploading.bytes.progress" = "%2$@'nin %1$@ ";
+
+/* Message how many items are currently being upload */
+"uploading.n.items" = "n.tane öge yükleniyor";
 
